--- a/simple_match.html
+++ b/simple_match.html
@@ -474,8 +474,8 @@ sql`, //multiple_skillsは\nの改行コードを含む文字列
     now_checking_match: false,
     match_url_array: [],
     matched_data_ary: null,
-    endpoint: 'http://localhost:8000',
-    // endpoint: 'https://cotton-concrete-catsup.glitch.me',
+    // endpoint: 'http://localhost:8000',
+    endpoint: 'https://cotton-concrete-catsup.glitch.me',
     // endpoint: 'http://127.0.0.1:3000',
     // endpoint: 'https://cotton-concrete-catsup.glitch.me',
 
